# SmartCart

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  docker-rootless.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 19718223ee0e_initial_schema.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/basket-compare/: page.tsx
frontend/src/app/price-battle/: page.tsx
frontend/src/app/product-history/: page.tsx
frontend/src/components/admin/: merge-dialog.tsx  product-edit-dialog.tsx  store-products-panel.tsx  unmatched-table.tsx
frontend/src/components/basket/: basket-table.tsx  store-total-card.tsx
frontend/src/components/battle/: best-deals-list.tsx  (+2 more)
frontend/src/lib/: api.ts  query-keys.ts  store-colors.ts  types.ts  utils.ts
frontend/src/providers/: query-provider.tsx
src/api/: main.py  schemas.py
src/api/routers/: admin.py  baskets.py  comparison.py  prices.py  products.py
src/core/: config.py  database.py  models.py  seed.py
src/dashboard/: app.py
src/dashboard/components/: charts.py  filters.py
src/dashboard/pages/: basket_compare.py  overview.py  price_battle.py  product_history.py
src/matcher/: matcher.py  normalizer.py
src/scheduler/: jobs.py
src/scrapers/: __init__.py  aldi.py  base.py  dunnes.py  lidl.py  supervalu.py  tesco.py
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_matcher/: test_matcher.py  test_normalizer.py
tests/test_scrapers/: test_base.py
(+12 files in other folders)
